# msx_pyutils

./: .gitattributes  .gitignore  README.md  README_ja.md  requirements.in  requirements.txt
_note_docs/src/: .keep
_tech_docs/: README.md  palette_registers.md  rom_mappers.md
basic_sc2_viewer/: README.md  make_exe.py
basic_sc2_viewer/src/: basic_sc2_viewer.py
docs/: index.html  scroll_viewer_rendering.md  test_saru.md
docs/images/: index.html  test_saru_2.html
docs/note/: index.html  readme.txt  test_saru.md.html
mmsxxasmhelper/: README.md  pyproject.toml
mmsxxasmhelper/examples/: ascii16_screen8_demo.py  config_scene_screen0_demo.py  msx_version_screen0_demo.py  msxrom_boot.py  screen2_palette_random.py
mmsxxasmhelper/src/mmsxxasmhelper/: config_scene.py  core.py  msxutils.py  psgstream.py  title_scene.py  titlescene.py  utils.py
msxasmhelper/: README.md  pyproject.toml
msxasmhelper/tests/: test_msxasmhelper.py
msxdisk/: README.md  pyproject.toml
msxdisk/src/msxdisk/: cli.py  fat12.py
projects/msxdisk/: README.md  pyproject.toml
projects/sc2_viewer_rom/: README.md  make_create_sc2_32k_rom_exe.py  make_create_sc2_megarom_exe.py  make_sc2_viewer_32k_rom_exe.py  make_sc2_viewer_megarom.exe.py  make_scroll_sc2_viewer_megarom_exe.py
projects/simple_sc2_converter/: pyproject.toml
rom_utils/: README.md  create_sc2_32k_rom.py
sc2_viewer_rom/: make_create_scroll_megarom_exe.py  memo.md
sc2_viewer_rom/src/: create_sc2_32k_rom.py  create_sc2_megarom.py  create_sc2_viewer_megarom.py  create_scroll_megarom.py  create_test_megarom.py  make_scroll_32k_rom.py  sc2_viewer_rom.py
sc2_viewer_rom/test_sc2_data/: solid_color_01.sc2  solid_color_02.sc2  solid_color_03.sc2  solid_color_04.sc2  solid_color_05.sc2  solid_color_06.sc2  solid_color_07.sc2  solid_color_08.sc2  solid_color_09.sc2  solid_color_10.sc2  solid_color_11.sc2  solid_color_12.sc2  solid_color_13.sc2  solid_color_14.sc2  solid_color_15.sc2
simple_sc2_converter/: README.md  pyproject.toml
simple_sc2_converter/src/simple_sc2_converter/: __init__.py  cli.py  converter.py
techdocs/: README.md  bios_calls.md  msx1_vdp_io.md  rom_mappers.md  screen1.5.md  vram_layouts.md  z80_assembly_byte_map.md
tests/: test_bit_instruction.py  test_block_debug_sections.py  test_debug_labels.py  test_debug_print_labels.py  test_define_created_funcs.py  test_dump_mem.py  test_dump_regs.py  test_embed_debug_string_macro.py  test_jp_po_pe.py  test_ldi_ldd.py  test_mem_addr_allocator.py  test_msx1pq_cli.py  test_screen0_config_menu.py  test_scroll_sc2_viewer_input_expansion.py  test_unique_label.py
tools/: package_dist.bat
(+22 files in other folders)
